[1.0.0] Refactor to more robust solution and add enum insertion